--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "https://fg935-dev.github.io/ecommerce-page",
+	"homepage": "https://frederick-gomez.github.io/ecommerce-page",
 	"name": "ecommerce-page",
 	"version": "0.1.0",
 	"private": true,
